# emoji-lang

./: .gitignore  Cargo.toml  README.md  justfile
src/: ast.rs  environment.rs  error.rs  function.rs  interpreter.rs  main.rs  parser.rs  return_value.rs  token.rs
test/: 1.emoji  2.emoji  3.emoji  english_1.txt  english_2.txt
translator/: main.rs
