[package]
name = "emoji-lang"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "emoji-lang"
path = "src/main.rs"

[[bin]]
name = "emoji-translator"
path = "translator/main.rs"

[profile.dev]
panic = "unwind"

[profile.release]
panic = "unwind"

[dependencies]
anyhow = "1.0.98"
logos = "0.15.0"
clap = { version = "4.5.40", features = ["derive"] }

[lints.rust]
unused_mut = "allow"
dead_code = "allow"
